[18] fix: update page width in spacings configuration

--- a/src/styles/project/_layout.scss
+++ b/src/styles/project/_layout.scss
@@ -1,8 +1,8 @@
 @use '../exports.scss' as *;
 
-/* @include fluid-responsive(14.8, 22, 1440, 2200, false, true);
+@include fluid-responsive(16, 26, 1440, 2500, false, true);
 @include fluid-responsive(16, 24.5, 640, 1023, false, false);
-@include fluid-responsive(14, 24, 375, 639, false, false); */
+@include fluid-responsive(14, 24, 375, 639, false, false);
 
 body {
   color: $neutral-600;
